MiniBrowser doesn't use accelerated drawing in WebKit2 windows if a WebKit1 window was opened first https://bugs.webkit.org/show_bug.cgi?id=141576 <rdar://problem/25304548>

Reviewed by Simon Fraser.

* UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences init]):
Make the NSUserDefaults key prefix for debug preferences (the only ones read
from NSUserDefaults) "WebKitDebug" instead of just "WebKit" so that they
don't conflict with the names that WebKit1 registers default values for.


Canonical link: https://commits.webkit.org/173908@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198593 268f45cc-cd09-0410-ab3c-d52691b4dbfc